--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 <div class = "container-fluid padding">
 	<div class = "row welcome text-center">
 		<div class = "col-12">
-			<h1 class = "display-4">Built with Ease</h1>
+			<h1 class = "display-4">Welcome to my website!</h1>
 		</div>
 		<hr>
 		<div class = "col-12">
 			<p class = "lead">
-				Welcome to my website made with Bootstrap 4!
+				Built with HTML5, CSS3, and Boostrap
 			</p>
 		</div>
 	</div>
@@ -98,23 +98,14 @@
 		<div class = "col-xs-12 col-sm-6 col-md-4">
 			<i class = "fas fa-code"></i>
 			<h3>HTML</h3>
-			<p>
-				Built with the Latest Version of HTML
-			</p>
 		</div>
 		<div class = "col-xs-12 col-sm-6 col-md-4">
 			<i class = "fas fa-bold"></i>
 			<h3>BOOTSTRAP</h3>
-			<p>
-				Built with the Latest Version of Bootstrap
-			</p>
 		</div>
 		<div class = "col-sm-12 col-md-4">
 			<i class = "fab fa-css3"></i>
 			<h3>CSS3</h3>
-			<p>
-				Built with the Latest Version of CSS
-			</p>
 		</div>
 	</div>
 	<hr class = "my-4">
@@ -152,9 +143,13 @@
 
 <!--- Footer -->
 <footer>
+<div class = "container-fluid">
+	<div class = "row text-center padding">
 <div class = "col 12">
 	<hr class = "light">
 	<h5>&copy; Brian Nguyen</h5>
+	</div>
+</div>
 </div>
 </footer>
 </body>
