--- a/index.html
+++ b/index.html
@@ -41,38 +41,16 @@
 <div id = "slides" class = "carousel slide" data-ride = "carousel">
 	<ul class = "carousel-indicators">
 		<li data-targets = "#slides" data-slide-to="0" class = "active"></li>
-		<li data-targets = "#slides" data-slide-to="1"></li>
-		<li data-targets = "#slides" data-slide-to="2"></li>
 	</ul>
 	<div class = "carousel-inner">
 		<div class = "carousel-item active">
 				<img src ="img/background.png">
 				<div class = "carousel-caption">
 					<h1 class = "display-2"> Brian Nguyen </h1>
-					<h3>Programmer, Ideator, and Powerlifter</h3>
+					<h3>Programmer, Ideator, Powerlifter</h3>
 					<button type = "button" class = "btn btn-outline-light btn-lg"> Fun Projects!</button>
 					<button type = "button" class = "btn btn-primary btn-lg" >About me!</button>
 				</div>
-		</div>
-		<div class = "carousel-item">
-				<img src ="img/background2.png">
-		</div>
-		<div class = "carousel-item">
-				<img src ="img/background3.png">
-		</div>
-	</div>
-</div>
-
-<!--- Jumbotron -->
-<div class ='container-fluid'>
-	<div class = "row jumbotron">
-		<div class = "col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-			<p class = "lead">
-				Sample Text stuff
-			</p>
-		</div>
-		<div class = "col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-			<a href = "#"><button type = "button" class = "btn btn-outline-secondary btn-lg">Sample</button></a>
 		</div>
 	</div>
 </div>
@@ -110,29 +88,12 @@
 	</div>
 	<hr class = "my-4">
 </div>
-<!--- Two Column Section -->
-
-
-<!--- Fixed background -->
-
-
-<!--- Emoji Section -->
-
-
-<!--- Meet the team -->
-
-
-<!--- Cards -->
-
-
-<!--- Two Column Section -->
-
 
 <!--- Connect -->
 <div class = "container-fluid padding">
 	<div class = "row text-center padding">
 		<div class = "col-12">
-			<h2>Connect</h2>
+			<h2>Connect with me!</h2>
 		</div>
 		<div class = "col-12 social padding">
 			<a href = "https://www.linkedin.com/in/brian-qh-nguyen/"><i class = "fab fa-linkedin"></i></a>
@@ -145,11 +106,11 @@
 <footer>
 <div class = "container-fluid">
 	<div class = "row text-center padding">
-<div class = "col 12">
-	<hr class = "light">
-	<h5>&copy; Brian Nguyen</h5>
+		<div class = "col 12">
+			<hr class = "light">
+			<h5>&copy; Brian Nguyen</h5>
+		</div>
 	</div>
-</div>
 </div>
 </footer>
 </body>
