--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Brian Nguyen's Website</title>
+	<title>Brian Nguyen</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -25,13 +25,13 @@
 	<div class = "collapse navbar-collapse" id = "navbarResponsive">
 		<ul class = "navbar-nav ml-auto">
 			<li class = "nav-item active">
-				<a class = "nav-link" href = "#">Home</a>
+				<a class = "nav-link" href = "index.html">Home</a>
 			</li>
 			<li class = "nav-item">
-				<a class = "nav-link" href = "#">About Me</a>
+				<a class = "nav-link" href = "aboutMe.html">About Me</a>
 			</li>
 			<li class = "nav-item">
-				<a class = "nav-link" href = "#">Side Projects</a>
+				<a class = "nav-link" href = "sideProjects.html">Side Projects</a>
 			</li>
 		</ul>
 	</div>
