added image to about me page

--- a/sideProjects.html
+++ b/sideProjects.html
@@ -36,5 +36,16 @@
   	</div>
   </div>
   </nav>
+  <!--- Footer -->
+  <footer>
+  <div class = "container-fluid">
+  	<div class = "row text-center padding">
+  		<div class = "col 12">
+  			<hr class = "light">
+  			<h5>&copy; Brian Nguyen</h5>
+  		</div>
+  	</div>
+  </div>
+  </footer>
 </body>
 </html>
