--- a/aboutMe.html
+++ b/aboutMe.html
@@ -36,5 +36,30 @@
   	</div>
   </div>
   </nav>
+  <!-- Introduction -->
+  <div class = "container-fluid">
+    <div class = "row text-center padding">
+      <div class = "col 12">
+        <h4>Hi! My name is Brian Nguyen</h5>
+        <h5>I am a rising sopohmore at University of Texas at Dallas</h4>
+      </div>
+    </div>
+  </div>
+  <div class = "col-md-4">
+    <div class = "thumbnail">
+      <img src = "img/headshot.jpg" alt = "headshot" style = "width:50%">
+    </div>
+  </div>
+  <!--- Footer -->
+  <footer>
+  <div class = "container-fluid">
+  	<div class = "row text-center padding">
+  		<div class = "col 12">
+  			<hr class = "light">
+  			<h5>&copy; Brian Nguyen</h5>
+  		</div>
+  	</div>
+  </div>
+  </footer>
 </body>
 </html>
