implemented working links for the buttons on the home page

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 				<div class = "carousel-caption">
 					<h1 class = "display-2"> Brian Nguyen </h1>
 					<h3>Programmer, Ideator, Powerlifter</h3>
-					<button type = "button" class = "btn btn-outline-light btn-lg"> Fun Projects!</button>
-					<button type = "button" class = "btn btn-primary btn-lg" >About me!</button>
+					<a href = "aboutMe.html" class = "btn btn-outline-light btn-lg"> About me!</a>
+					<a href = "sideProjects.html" class = "btn btn-primary btn-lg" >My Personal Projects!</button>
 				</div>
 		</div>
 	</div>
@@ -71,7 +71,7 @@
 </div>
 
 <!--- Three Column Section -->
-<div class = "container-fluid-padding">
+<div class = "container-fluid padding">
 	<div class = "row text-center padding">
 		<div class = "col-xs-12 col-sm-6 col-md-4">
 			<i class = "fas fa-code"></i>
