--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 					<h1 class = "display-2"> Brian Nguyen </h1>
 					<h3>Programmer, Ideator, Powerlifter</h3>
 					<a href = "aboutMe.html" class = "btn btn-outline-light btn-lg"> About me!</a>
-					<a href = "sideProjects.html" class = "btn btn-primary btn-lg" >My Personal Projects!</button>
+					<a href = "sideProjects.html" class = "btn btn-primary btn-lg" >My Personal Projects!</a>
 				</div>
 		</div>
 	</div>
 </div>
 
 <!--- Welcome Section -->
-<div class = "container-fluid padding">
+<div class = "container-fluid-padding">
 	<div class = "row welcome text-center">
 		<div class = "col-12">
 			<h1 class = "display-4">Welcome to my website!</h1>
@@ -71,7 +71,7 @@
 </div>
 
 <!--- Three Column Section -->
-<div class = "container-fluid padding">
+<div class = "container-fluid-padding">
 	<div class = "row text-center padding">
 		<div class = "col-xs-12 col-sm-6 col-md-4">
 			<i class = "fas fa-code"></i>
