compressed the image in aboutMe

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -39,15 +39,18 @@
   <!-- Introduction -->
   <div class = "container-fluid">
     <div class = "row text-center padding">
-      <div class = "col 12">
-        <h4>Hi! My name is Brian Nguyen</h5>
-        <h5>I am a rising sopohmore at University of Texas at Dallas</h4>
+      <div class = "col-xs-12 col-sm-6 col-md-4 col-lg 2">
+        <h1>Hello!</h1>
+        <h5>My name is Brian Nguyen</h4>
+        <p>
+          I am interested in data science and machine learning.
+        </p>
       </div>
-    </div>
-  </div>
-  <div class = "col-md-4">
-    <div class = "thumbnail">
-      <img src = "img/headshot.jpg" alt = "headshot" style = "width:50%">
+      <div class = "col-xs-12 col-sm-6 col-md-4 col-lg 2">
+        <div class = "img-thumbnail img-fluid">
+          <img class = "img-responsive" src = "img/headshot.jpg" alt = "headshot" style = "width:50%">
+        </div>
+      </div>
     </div>
   </div>
   <!--- Footer -->
