added active page on the navigation bar

--- a/sideProjects.html
+++ b/sideProjects.html
@@ -16,20 +16,20 @@
   <nav class = "navbar navbar-expand-xl navbar-light bg-light sticky-top" >
   <div class ="container-fluid">
   	<a class = "navbar-brand" href = "#">
-  		<img src = "img/logo.png">
+  	<!--	<img src = "img/logo.png"> -->
   	</a>
   	<button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarResponsive">
   		<span class = "navbar-toggler-icon"> </span>
   	</button>
   	<div class = "collapse navbar-collapse" id = "navbarResponsive">
   		<ul class = "navbar-nav ml-auto">
-  			<li class = "nav-item active">
+  			<li class = "nav-item">
   				<a class = "nav-link" href = "index.html">Home</a>
   			</li>
   			<li class = "nav-item">
   				<a class = "nav-link" href = "aboutMe.html">About Me</a>
   			</li>
-  			<li class = "nav-item">
+  			<li class = "nav-item active">
   				<a class = "nav-link" href = "sideProjects.html">Side Projects</a>
   			</li>
   		</ul>
@@ -38,7 +38,7 @@
   </nav>
   <!--- Footer -->
   <footer>
-  <div class = "container-fluid">
+  <div class = "container-fluid padding">
   	<div class = "row text-center padding">
   		<div class = "col 12">
   			<hr class = "light">
