--- a/aboutMe.html
+++ b/aboutMe.html
@@ -16,17 +16,17 @@
   <nav class = "navbar navbar-expand-xl navbar-light bg-light sticky-top" >
   <div class ="container-fluid">
   	<a class = "navbar-brand" href = "#">
-  		<img src = "img/logo.png">
+  		<!--<img src = "img/logo.png"> -->
   	</a>
   	<button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarResponsive">
   		<span class = "navbar-toggler-icon"> </span>
   	</button>
   	<div class = "collapse navbar-collapse" id = "navbarResponsive">
   		<ul class = "navbar-nav ml-auto">
-  			<li class = "nav-item active">
+  			<li class = "nav-item">
   				<a class = "nav-link" href = "index.html">Home</a>
   			</li>
-  			<li class = "nav-item">
+  			<li class = "nav-item active">
   				<a class = "nav-link" href = "aboutMe.html">About Me</a>
   			</li>
   			<li class = "nav-item">
