--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <nav class = "navbar navbar-expand-xl navbar-light bg-light sticky-top" >
 <div class ="container-fluid">
 	<a class = "navbar-brand" href = "#">
-		<img src = "img/logo.png">
+		<!--<img src = "img/logo.png"> -->
 	</a>
 	<button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarResponsive">
 		<span class = "navbar-toggler-icon"> </span>
