fixed typo in bootstrap

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<hr>
 		<div class = "col-12">
 			<p class = "lead">
-				Built with HTML5, CSS3, and Boostrap
+				Built with HTML5, CSS3, and Bootstrap
 			</p>
 		</div>
 	</div>
