--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 	<div class = "collapse navbar-collapse" id = "navbarResponsive">
 		<ul class = "navbar-nav ml-auto">
 			<li class = "nav-item active">
-				<a class = "nav-link" href = "index.html">Home</a>
+				<a class = "nav-link" href = "index.html"><i class = "fas fa-home"> </i > Home</a>
 			</li>
 			<li class = "nav-item">
-				<a class = "nav-link" href = "aboutMe.html">About Me</a>
+				<a class = "nav-link" href = "aboutMe.html"><i class = "fas fa-male"></i > About Me</a>
 			</li>
 			<li class = "nav-item">
-				<a class = "nav-link" href = "sideProjects.html">Side Projects</a>
+				<a class = "nav-link" href = "sideProjects.html"><i class = "fas fa-code-branch"> </i > Side Projects</a>
 			</li>
 		</ul>
 	</div>
