--- a/sideProjects.html
+++ b/sideProjects.html
@@ -23,14 +23,14 @@
   	</button>
   	<div class = "collapse navbar-collapse" id = "navbarResponsive">
   		<ul class = "navbar-nav ml-auto">
-  			<li class = "nav-item">
-  				<a class = "nav-link" href = "index.html">Home</a>
+        <li class = "nav-item">
+  				<a class = "nav-link" href = "index.html"><i class = "fas fa-home"> </i > Home</a>
   			</li>
   			<li class = "nav-item">
-  				<a class = "nav-link" href = "aboutMe.html">About Me</a>
+  				<a class = "nav-link" href = "aboutMe.html"><i class = "fas fa-male"></i > About Me</a>
   			</li>
   			<li class = "nav-item active">
-  				<a class = "nav-link" href = "sideProjects.html">Side Projects</a>
+  				<a class = "nav-link" href = "sideProjects.html"><i class = "fas fa-code-branch"> </i > Side Projects</a>
   			</li>
   		</ul>
   	</div>
