changed home page wallaper and removed bar on the bottom

--- a/index.html
+++ b/index.html
@@ -39,12 +39,9 @@
 </nav>
 <!--- Image Slider -->
 <div id = "slides" class = "carousel slide" data-ride = "carousel">
-	<ul class = "carousel-indicators">
-		<li data-targets = "#slides" data-slide-to="0" class = "active"></li>
-	</ul>
 	<div class = "carousel-inner">
 		<div class = "carousel-item active">
-				<img src ="img/background.png">
+				<img src ="img/background_home.jpeg">
 				<div class = "carousel-caption">
 					<h1 class = "display-2"> Brian Nguyen </h1>
 					<h3>Programmer, Ideator, Powerlifter</h3>
