--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <!-- Navigation -->
-<nav class = "navbar navbar-expand-xl navbar-light bg-light sticky-top" >
+<nav class = "navbar navbar-expand-xl navbar-light bg-light" >
 <div class ="container-fluid">
 	<a class = "navbar-brand" href = "#">
 		<!--<img src = "img/logo.png"> -->
