--- a/sideProjects.html
+++ b/sideProjects.html
@@ -36,6 +36,23 @@
   	</div>
   </div>
   </nav>
+  <!-- Projects -->
+  <div class = "container-fluid padding">
+    <div class = "row text-center padding">
+  		<div class = "col-xs-12 col-sm-6 col-md-4">
+  			<i class = "fab fa-twitter"></i>
+  			<h3>ArkAngel</h3>
+  		</div>
+  		<div class = "col-xs-12 col-sm-6 col-md-4">
+  			<a href = "https://www.linkedin.com/in/brian-qh-nguyen/"> <i class = "fas fa-sign-language"></i></a>
+  			<h3>Convolutional American Sign Language (C-ASL)</h3>
+  		</div>
+  		<div class = "col-sm-12 col-md-4">
+  			<i class = "fas fa-user-md"></i>
+  			<h3>Ensemble Neural Networks for Breast Cancer Diagnosis</h3>
+  		</div>
+  	</div>
+  </div>
   <!--- Footer -->
   <footer>
   <div class = "container-fluid padding">
