--- a/sideProjects.html
+++ b/sideProjects.html
@@ -40,15 +40,19 @@
   <div class = "container-fluid padding">
     <div class = "row text-center padding">
   		<div class = "col-xs-12 col-sm-6 col-md-4">
-  			<i class = "fab fa-twitter"></i>
-  			<h3>ArkAngel</h3>
+  			<a href = "https://github.com/ledet20/arcangel"> <i class = "fab fa-twitter"></i></a>
+  			<h3>ArcAngel</h3>
   		</div>
   		<div class = "col-xs-12 col-sm-6 col-md-4">
-  			<a href = "https://www.linkedin.com/in/brian-qh-nguyen/"> <i class = "fas fa-sign-language"></i></a>
+  			<a href = "https://github.com/Abhishaike/ASL_Translation"> <i class = "fas fa-sign-language"></i></a>
   			<h3>Convolutional American Sign Language (C-ASL)</h3>
+        <p>
+          Utilized a convolutional neural network and color segmentation techniques to classify the ASL alphabet except for J and Z.
+          Developed with Python, Keras, and OpenCV.
+        </p>
   		</div>
   		<div class = "col-sm-12 col-md-4">
-  			<i class = "fas fa-user-md"></i>
+  			<a href = "https://github.com/briannoogin/Neural-Network-Science-Fair-Research"> <i class = "fas fa-user-md"></i></a>
   			<h3>Ensemble Neural Networks for Breast Cancer Diagnosis</h3>
   		</div>
   	</div>
