--- a/sideProjects.html
+++ b/sideProjects.html
@@ -42,18 +42,25 @@
   		<div class = "col-xs-12 col-sm-6 col-md-4">
   			<a href = "https://github.com/ledet20/arcangel"> <i class = "fab fa-twitter"></i></a>
   			<h3>ArcAngel</h3>
+        <p>
+          Android app that aggregated and mapped tweets to show location of interest for first-responders. Developed with Matlab, Java, and Esri API.
+        </p>
   		</div>
   		<div class = "col-xs-12 col-sm-6 col-md-4">
   			<a href = "https://github.com/Abhishaike/ASL_Translation"> <i class = "fas fa-sign-language"></i></a>
-  			<h3>Convolutional American Sign Language (C-ASL)</h3>
+  			<h3>C-ASL</h3>
         <p>
           Utilized a convolutional neural network and color segmentation techniques to classify the ASL alphabet except for J and Z.
           Developed with Python, Keras, and OpenCV.
         </p>
   		</div>
-  		<div class = "col-sm-12 col-md-4">
+  		<div class = "col-xs-12 col-sm-6 col-md-4">
   			<a href = "https://github.com/briannoogin/Neural-Network-Science-Fair-Research"> <i class = "fas fa-user-md"></i></a>
-  			<h3>Ensemble Neural Networks for Breast Cancer Diagnosis</h3>
+  			<h3>Breast Cancer Diagnosis</h3>
+        <p>
+          Used an ensemble of shallow neural networks to classify whether a patient had benign or malignant cancer. Data collected from University of Wisconsin.
+          Developed with Matlab.
+        </p>
   		</div>
   	</div>
   </div>
