--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +11,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="style.css" rel="stylesheet">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <!-- Navigation -->
@@ -37,18 +40,17 @@
   </div>
   </nav>
   <!-- Introduction -->
-  <div class = "container-fluid">
-    <div class = "row text-center padding">
+  <div class = "container-fluid intro">
+    <div class = "row padding">
       <div class = "col-xs-12 col-sm-6 col-md-4 col-lg 2">
         <h1>Hello!</h1>
-        <h5>My name is Brian Nguyen</h4>
-        <p>
-          I am interested in data science and machine learning.
+        <p class = "intro">
+          My name is Brian Nguyen. I interested in machine learning and data science.I like improve myself at the gym. I also listen to EDM.
         </p>
       </div>
       <div class = "col-xs-12 col-sm-6 col-md-4 col-lg 2">
-        <div class = "img-thumbnail img-fluid">
-          <img class = "img-responsive" src = "img/headshot.jpg" alt = "headshot" style = "width:50%">
+        <div class = "img-fluid">
+          <img class = "img-responsive" src = "img/headshot.jpg" alt = "headshot" style = "width:35%">
         </div>
       </div>
     </div>
