centered the about me page

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <div class = "container-fluid padding">
 	<div class = "row text-center padding">
 		<div class = "col-12">
-			<h2>Connect with me!</h2>
+			<h2>Follow Me!</h2>
 		</div>
 		<div class = "col-12 social padding">
 			<a href = "https://www.linkedin.com/in/brian-qh-nguyen/"><i class = "fab fa-linkedin"></i></a>
