--- a/aboutMe.html
+++ b/aboutMe.html
@@ -40,17 +40,17 @@
   </div>
   </nav>
   <!-- Introduction -->
-  <div class = "container-fluid intro">
+  <div class = "container-fluid">
     <div class = "row padding">
-      <div class = "col-xs-12 col-sm-6 col-md-4 col-lg 2">
+      <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-6 offset-lg-3">
         <h1>Hello!</h1>
         <p class = "intro">
-          My name is Brian Nguyen. I interested in machine learning and data science.I like improve myself at the gym. I also listen to EDM.
+          I'm Brian Nguyen. I enjoy learning about machine learning, working out, and listening to EDM.
         </p>
       </div>
-      <div class = "col-xs-12 col-sm-6 col-md-4 col-lg 2">
+      <div class = "col-xs-12 col-sm-6 col-md-4 col-lg 6">
         <div class = "img-fluid">
-          <img class = "img-responsive" src = "img/headshot.jpg" alt = "headshot" style = "width:35%">
+          <img class = "img-responsive" src = "img/headshot.jpg" alt = "headshot" style = "width:65%">
         </div>
       </div>
     </div>
