--- a/sideProjects.html
+++ b/sideProjects.html
@@ -18,21 +18,21 @@
   <nav class = "navbar navbar-expand-xl navbar-light bg-light" >
   <div class ="container-fluid">
   	<a class = "navbar-brand" href = "#">
-  	<!--	<img src = "img/logo.png"> -->
+  		<!--<img src = "img/logo.png"> -->
   	</a>
   	<button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarResponsive">
   		<span class = "navbar-toggler-icon"> </span>
   	</button>
   	<div class = "collapse navbar-collapse" id = "navbarResponsive">
   		<ul class = "navbar-nav ml-auto">
-        <li class = "nav-item">
-  				<a class = "nav-link" href = "index.html"><i class = "fas fa-home"> </i > Home</a>
+  			<li class = "nav-item active">
+  				<a class = "nav-link" href = "index.html"><i class = "fas fa-home fa-fw"> </i > Home</a>
   			</li>
   			<li class = "nav-item">
-  				<a class = "nav-link" href = "aboutMe.html"><i class = "fas fa-male"></i > About Me</a>
+  				<a class = "nav-link" href = "aboutMe.html"><i class = "fas fa-male fa-fw"></i > About Me</a>
   			</li>
-  			<li class = "nav-item active">
-  				<a class = "nav-link" href = "sideProjects.html"><i class = "fas fa-code-branch"> </i > Side Projects</a>
+  			<li class = "nav-item">
+  				<a class = "nav-link" href = "sideProjects.html"><i class = "fas fa-code-branch fa-fw"> </i > Side Projects</a>
   			</li>
   		</ul>
   	</div>
