added devpost logo and link to social media section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 		<div class = "col-12 social padding">
 			<a href = "https://www.linkedin.com/in/brian-qh-nguyen/"><i class = "fab fa-linkedin"></i></a>
 			<a href = "https://github.com/briannoogin"><i class = "fab fa-github"></i></a>
+			<a href = "https://devpost.com/briannoogin"><img src="img/devpost_medium.svg"></i></a>
 		</div>
 	</div>
 </div>
