added devpost font and its styling elements to home page. edited the projects page and deleted extraneous files

--- a/sideProjects.html
+++ b/sideProjects.html
@@ -42,7 +42,7 @@
   <div class = "container-fluid padding">
     <div class = "row text-center padding">
   		<div class = "col-xs-12 col-sm-6 col-md-4">
-  			<a href = "https://github.com/ledet20/arcangel"> <i class = "fab fa-twitter"></i></a>
+  			<a href = "https://github.com/ledet20/arcangel/"> <i class = "fab fa-twitter"></i></a>
   			<h3>ArcAngel</h3>
         <p>
           Android app that aggregated and mapped tweets to show location of interest for first-responders.
@@ -50,15 +50,15 @@
         </p>
   		</div>
   		<div class = "col-xs-12 col-sm-6 col-md-4">
-  			<a href = "https://github.com/Abhishaike/ASL_Translation"> <i class = "fas fa-sign-language"></i></a>
+  			<a href = "https://github.com/Abhishaike/ASL_Translation/"> <i class = "fas fa-sign-language"></i></a>
   			<h3>C-ASL</h3>
         <p>
           Utilized a convolutional neural network and color segmentation techniques to classify the ASL alphabet except for J and Z.
-          Developed with Python, Keras, and OpenCV. 
+          Developed with Python, Keras, and OpenCV.
         </p>
   		</div>
   		<div class = "col-xs-12 col-sm-6 col-md-4">
-  			<a href = "https://github.com/briannoogin/Neural-Network-Science-Fair-Research"> <i class = "fas fa-user-md"></i></a>
+  			<a href = "https://github.com/briannoogin/Neural-Network-Science-Fair-Research/"> <i class = "fas fa-user-md"></i></a>
   			<h3>Breast Cancer Diagnosis</h3>
         <p>
           Used an ensemble of shallow neural networks to classify whether a tumor is benign or malignant. Data collected from University of Wisconsin.
