--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
 		</div>
 		<div class = "col-12 social padding">
 			<a href = "https://www.linkedin.com/in/brian-qh-nguyen/"><i class = "fab fa-linkedin"></i></a>
-			<a href = "https://github.com/briannoogin"><i class = "fab fa-github"></i></a>
-			<a href = "https://devpost.com/briannoogin"><img src="img/devpost_medium.svg"></i></a>
+			<a href = "https://github.com/briannoogin/"><i class = "fab fa-github"></i></a>
+		<!--	<a href = "https://devpost.com/briannoogin"><img src="img/devpost_medium.svg"></i></a> -->
+			<a href = "https://devpost.com/briannoogin/"><span class="icon-devpost_medium"></span></a>
 		</div>
 	</div>
 </div>
