--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+permalink: /home/
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -97,7 +100,6 @@
 		<div class = "col-12 social padding">
 			<a href = "https://www.linkedin.com/in/brian-qh-nguyen/"><i class = "fab fa-linkedin"></i></a>
 			<a href = "https://github.com/briannoogin/"><i class = "fab fa-github"></i></a>
-		<!--	<a href = "https://devpost.com/briannoogin"><img src="img/devpost_medium.svg"></i></a> -->
 			<a href = "https://devpost.com/briannoogin/"><span class="icon-devpost_medium"></span></a>
 		</div>
 	</div>
