--- a/aboutMe.html
+++ b/aboutMe.html
@@ -30,7 +30,7 @@
   				<a class = "nav-link" href = "index"><i class = "fas fa-home fa-fw"> </i > Home</a>
   			</li>
   			<li class = "nav-item active">
-  				<a class = "nav-link" href = "aboutme"><i class = "fas fa-male fa-fw"></i > About Me</a>
+  				<a class = "nav-link" href = "aboutMe"><i class = "fas fa-male fa-fw"></i > About Me</a>
   			</li>
   			<li class = "nav-item">
   				<a class = "nav-link" href = "projects"><i class = "fas fa-code-branch fa-fw"> </i > Side Projects</a>
