--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
   	<div class = "collapse navbar-collapse" id = "navbarResponsive">
   		<ul class = "navbar-nav ml-auto">
   			<li class = "nav-item">
-  				<a class = "nav-link" href = "index"><i class = "fas fa-home fa-fw"> </i > Home</a>
+  				<a class = "nav-link" href = "/"><i class = "fas fa-home fa-fw"> </i > Home</a>
   			</li>
   			<li class = "nav-item">
   				<a class = "nav-link" href = "aboutMe"><i class = "fas fa-male fa-fw"></i > About Me</a>
