fixed links in the buttons in the carousel

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 				<div class = "carousel-caption">
 					<h1 class = "display-2"> Brian Nguyen </h1>
 					<h3>Programmer, Ideator, Powerlifter</h3>
-					<a href = "aboutMe.html" class = "btn btn-outline-light btn-lg"> About me!</a>
-					<a href = "sideProjects.html" class = "btn btn-primary btn-lg" >My Personal Projects!</a>
+					<a href = "aboutMe" class = "btn btn-outline-light btn-lg"> About me!</a>
+					<a href = "projects" class = "btn btn-primary btn-lg" >My Personal Projects!</a>
 				</div>
 		</div>
 	</div>
