--- a/aboutMe.html
+++ b/aboutMe.html
@@ -19,7 +19,6 @@
   <nav class = "navbar navbar-expand-xl navbar-light bg-light" >
   <div class ="container-fluid">
   	<a class = "navbar-brand" href = "#">
-  		<!--<img src = "img/logo.png"> -->
   	</a>
   	<button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarResponsive">
   		<span class = "navbar-toggler-icon"> </span>
@@ -46,6 +45,7 @@
         <h1>Hello!</h1>
         <p class = "intro">
           I'm Brian Nguyen. I enjoy learning about machine learning, working out, and listening to EDM.
+					Feel free to check out my <a href =  "resume.pdf"> resume!</a>
         </p>
       </div>
       <div class = "col-xs-12 col-sm-6 col-md-4 col-lg 6">
