added name to logo part of the navigation bar and added a style element

--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,8 @@
   <!-- Navigation -->
   <nav class = "navbar navbar-expand-xl navbar-light bg-light" >
   <div class ="container-fluid">
-  	<a class = "navbar-brand" href = "#">
-  		<!--<img src = "img/logo.png"> -->
+  	<a class = "navbar-brand" href = "/">
+			<h1>Brian <span class = "colored">Nguyen</span></h1>
   	</a>
   	<button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbarResponsive">
   		<span class = "navbar-toggler-icon"> </span>
