--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
   				<a class = "nav-link" href = "aboutMe"><i class = "fas fa-male fa-fw"></i > About Me</a>
   			</li>
   			<li class = "nav-item active">
-  				<a class = "nav-link" href = "projects"><i class = "fas fa-code-branch fa-fw"> </i > Side Projects</a>
+  				<a class = "nav-link" href = "projects"><i class = "fas fa-code-branch fa-fw"> </i > Projects</a>
   			</li>
   		</ul>
   	</div>
