added social media links to the footer and changed columns of the css,html and bootstrap group

--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
   <!-- Projects -->
   <div class = "container-fluid padding">
     <div class = "row text-center padding">
-  		<div class = "col-xs-12 col-sm-6 col-md-4">
+  		<div class = "col-xs-12 col-sm-4 col-md-4">
   			<a href = "https://github.com/ledet20/arcangel/"> <i class = "fab fa-twitter"></i></a>
   			<h3>ArcAngel</h3>
         <p>
@@ -49,7 +49,7 @@
           Developed with Matlab, Java, and Esri API. Developed at TAMUHACK 2018. Won Best Use of ESRI API.
         </p>
   		</div>
-  		<div class = "col-xs-12 col-sm-6 col-md-4">
+  		<div class = "col-xs-12 col-sm-4 col-md-4">
   			<a href = "https://github.com/Abhishaike/ASL_Translation/"> <i class = "fas fa-sign-language"></i></a>
   			<h3>C-ASL</h3>
         <p>
@@ -57,7 +57,7 @@
           Developed with Python, Keras, and OpenCV.
         </p>
   		</div>
-  		<div class = "col-xs-12 col-sm-6 col-md-4">
+  		<div class = "col-xs-12 col-sm-4 col-md-4">
   			<a href = "https://github.com/briannoogin/Neural-Network-Science-Fair-Research/"> <i class = "fas fa-user-md"></i></a>
   			<h3>Breast Cancer Diagnosis</h3>
         <p>
@@ -67,16 +67,21 @@
   		</div>
   	</div>
   </div>
-  <!--- Footer -->
-  <footer>
-  <div class = "container-fluid padding">
-  	<div class = "row text-center padding">
-  		<div class = "col 12">
-  			<hr class = "light">
-  			<h5>&copy; Brian Nguyen</h5>
-  		</div>
-  	</div>
-  </div>
-  </footer>
+	<!--- Footer -->
+	<footer>
+	<div class = "container-fluid">
+		<div class = "row text-center padding">
+			<div class = "col 12">
+				<hr class = "light">
+				<h5>&copy; Brian Nguyen</h5>
+			</div>
+			<div class = "col-12 social padding">
+				<a href = "https://www.linkedin.com/in/brian-qh-nguyen/"><i class = "fab fa-linkedin"></i></a>
+				<a href = "https://github.com/briannoogin/"><i class = "fab fa-github"></i></a>
+				<a href = "https://devpost.com/briannoogin/"><span class="icon-devpost_medium"></span></a>
+			</div>
+		</div>
+	</div>
+	</footer>
 </body>
 </html>
