--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<a class = "nav-link" href = "aboutMe"><i class = "fas fa-male fa-fw"></i > About Me</a>
 			</li>
 			<li class = "nav-item">
-				<a class = "nav-link" href = "projects"><i class = "fas fa-code-branch fa-fw"> </i > Projects</a>
+				<a class = "nav-link" href = "projects"><i class = "fas fa-code-branch fa-fw"> </i > Side Projects</a>
 			</li>
 		</ul>
 	</div>
@@ -64,7 +64,7 @@
 		<hr>
 		<div class = "col-12">
 			<p class = "lead">
-				Built with HTML5, CSS3, and Bootstrap
+				Built with HTML5, CSS3, and Bootstrap 4
 			</p>
 		</div>
 	</div>
@@ -73,36 +73,20 @@
 <!--- Three Column Section -->
 <div class = "container-fluid-padding">
 	<div class = "row text-center padding">
-		<div class = "col-xs-12 col-sm-6 col-md-4">
+		<div class = "col-xs-12 col-sm-4 col-md-4">
 			<i class = "fas fa-code"></i>
 			<h3>HTML</h3>
 		</div>
-		<div class = "col-sm-12 col-md-4">
+		<div class = "col-xs-12 col-sm-4 col-md-4">
 			<i class = "fab fa-css3"></i>
 			<h3>CSS3</h3>
 		</div>
-		<div class = "col-xs-12 col-sm-6 col-md-4">
+		<div class = "col-xs-12 col-sm-4 col-md-4">
 			<i class = "fas fa-bold"></i>
 			<h3>BOOTSTRAP</h3>
 		</div>
 	</div>
-	<hr class = "my-4">
 </div>
-
-<!--- Connect -->
-<div class = "container-fluid padding">
-	<div class = "row text-center padding">
-		<div class = "col-12">
-			<h2>Follow Me!</h2>
-		</div>
-		<div class = "col-12 social padding">
-			<a href = "https://www.linkedin.com/in/brian-qh-nguyen/"><i class = "fab fa-linkedin"></i></a>
-			<a href = "https://github.com/briannoogin/"><i class = "fab fa-github"></i></a>
-			<a href = "https://devpost.com/briannoogin/"><span class="icon-devpost_medium"></span></a>
-		</div>
-	</div>
-</div>
-
 <!--- Footer -->
 <footer>
 <div class = "container-fluid">
@@ -110,6 +94,11 @@
 		<div class = "col 12">
 			<hr class = "light">
 			<h5>&copy; Brian Nguyen</h5>
+		</div>
+		<div class = "col-12 social padding">
+			<a href = "https://www.linkedin.com/in/brian-qh-nguyen/"><i class = "fab fa-linkedin"></i></a>
+			<a href = "https://github.com/briannoogin/"><i class = "fab fa-github"></i></a>
+			<a href = "https://devpost.com/briannoogin/"><span class="icon-devpost_medium"></span></a>
 		</div>
 	</div>
 </div>
