--- a/projects.html
+++ b/projects.html
@@ -42,31 +42,98 @@
   <div class = "container-fluid padding">
     <div class = "row text-center padding">
   		<div class = "col-xs-12 col-sm-4 col-md-4">
-  			<a href = "https://github.com/ledet20/arcangel/"> <i class = "fab fa-twitter"></i></a>
+  			<a href = "#modal1" class = "modal-link" data-toggle = "modal"> <i class = "fab fa-twitter"></i></a>
   			<h3>ArcAngel</h3>
-        <p>
-          Android app that aggregated and mapped tweets to show location of interest for first-responders.
-          Developed with Matlab, Java, and Esri API. Developed at TAMUHACK 2018. Won Best Use of ESRI API.
+        <p class = "text-muted">
+					Hackathon Project
         </p>
   		</div>
   		<div class = "col-xs-12 col-sm-4 col-md-4">
-  			<a href = "https://github.com/Abhishaike/ASL_Translation/"> <i class = "fas fa-sign-language"></i></a>
+  			<a href = "#modal2" class = "modal-link" data-toggle = "modal"> <i class = "fas fa-sign-language"></i></a>
   			<h3>C-ASL</h3>
-        <p>
-          Utilized a convolutional neural network and color segmentation techniques to classify the ASL alphabet except for J and Z.
-          Developed with Python, Keras, and OpenCV.
+        <p class = "text-muted">
+          ACM Project
         </p>
   		</div>
   		<div class = "col-xs-12 col-sm-4 col-md-4">
-  			<a href = "https://github.com/briannoogin/Neural-Network-Science-Fair-Research/"> <i class = "fas fa-user-md"></i></a>
+  			<a href = "#modal3" class = "modal-link" data-toggle = "modal"> <i class = "fas fa-user-md"></i></a>
   			<h3>Breast Cancer Diagnosis</h3>
-        <p>
-          Used an ensemble of shallow neural networks to classify whether a tumor is benign or malignant. Data collected from University of Wisconsin.
-          Developed with Matlab.
+        <p class = "text-muted">
+          Research Project
         </p>
   		</div>
   	</div>
   </div>
+	<!--Modals-->
+	<!-- ArcAngel-->
+	<div class = "modal fade" id = "modal1">
+		<div class = "modal-dialog">
+			<div class = "modal-content">
+				<!-- Modal header-->
+				<div class = "modal-header">
+					<h4 class = "model-title">ArcAngel</h4>
+					<button type = "button" class = "close" data-dismiss = "modal">&times;</button>
+				</div>
+				<!-- Modal body-->
+				<div class = "modal-body">
+					<p>
+						Android app that aggregated and mapped tweets to show location of interest for first-responders.
+	          Developed with Matlab, Java, and Esri API. Developed at TAMUHACK 2018. Won Best Use of ESRI API.
+					</p>
+				</div>
+				<!--Modal footer -->
+				<div class = "modal-footer">
+					<button type = "button" class = "btn btn-danger" data-dismiss = "modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- C-ASL-->
+	<div class = "modal fade" id = "modal2">
+		<div class = "modal-dialog">
+			<div class = "modal-content">
+				<!-- Modal header-->
+				<div class = "modal-header">
+					<h4 class = "model-title">C-ASL</h4>
+					<button type = "button" class = "close" data-dismiss = "modal">&times;</button>
+				</div>
+				<!-- Modal body-->
+				<div class = "modal-body">
+					<p>
+						Utilized a convolutional neural network and color segmentation techniques to classify the ASL alphabet except for J and Z.
+						Developed with Python, Keras, and OpenCV.
+					</p>
+				</div>
+				<!--Modal footer -->
+				<div class = "modal-footer">
+					<button type = "button" class = "btn btn-danger" data-dismiss = "modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!--Breast cancer diagnosis-->
+	<div class = "modal fade" id = "modal3">
+		<div class = "modal-dialog">
+			<div class = "modal-content">
+				<!-- Modal header-->
+				<div class = "modal-header">
+					<h4 class = "model-title">Breast Cancer Diagnosis</h4>
+					<button type = "button" class = "close" data-dismiss = "modal">&times;</button>
+				</div>
+				<!-- Modal body-->
+				<div class = "modal-body">
+					<p>
+						Used an ensemble of shallow neural networks to classify whether a tumor is benign or malignant.
+						Data collected from University of Wisconsin. Developed with Matlab.
+					</p>
+				</div>
+				<!--Modal footer -->
+				<div class = "modal-footer">
+					<button type = "button" class = "btn btn-danger" data-dismiss = "modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!--- Footer -->
 	<footer>
 	<div class = "container-fluid">
