added github link button to modals

--- a/projects.html
+++ b/projects.html
@@ -92,6 +92,7 @@
 				</div>
 				<!--Modal footer -->
 				<div class = "modal-footer">
+					<a href = "https://github.com/ledet20/arcangel" class = "btn btn-info" role = "button">GitHub Link</a>
 					<button type = "button" class = "btn btn-danger" data-dismiss = "modal">Close</button>
 				</div>
 			</div>
@@ -115,6 +116,7 @@
 				</div>
 				<!--Modal footer -->
 				<div class = "modal-footer">
+					<a href = "https://github.com/Abhishaike/ASL_Translation" class = "btn btn-info" role = "button">GitHub Link</a>
 					<button type = "button" class = "btn btn-danger" data-dismiss = "modal">Close</button>
 				</div>
 			</div>
@@ -138,6 +140,7 @@
 				</div>
 				<!--Modal footer -->
 				<div class = "modal-footer">
+					<a href = "https://github.com/briannoogin/Neural-Network-Science-Fair-Research" class = "btn btn-info" role = "button">GitHub Link</a>
 					<button type = "button" class = "btn btn-danger" data-dismiss = "modal">Close</button>
 				</div>
 			</div>
