removed blue border after modal is clicked

--- a/projects.html
+++ b/projects.html
@@ -50,21 +50,21 @@
   <!-- Projects -->
   <div class = "container-fluid padding">
     <div class = "row text-center padding">
-  		<div class = "col-xs-12 col-sm-4 col-md-4">
+  		<div class = "col-xs-12 col-sm-4 col-md-4 modal-container">
   			<a href = "#modal1" class = "modal-link" data-toggle = "modal"> <i class = "fab fa-twitter"></i></a>
   			<h3>ArcAngel</h3>
         <p class = "text-muted">
 					Hackathon Project
         </p>
   		</div>
-  		<div class = "col-xs-12 col-sm-4 col-md-4">
+  		<div class = "col-xs-12 col-sm-4 col-md-4 modal-container">
   			<a href = "#modal2" class = "modal-link" data-toggle = "modal"> <i class = "fas fa-sign-language"></i></a>
   			<h3>C-ASL</h3>
         <p class = "text-muted">
           ACM Project
         </p>
   		</div>
-  		<div class = "col-xs-12 col-sm-4 col-md-4">
+  		<div class = "col-xs-12 col-sm-4 col-md-4 modal-container">
   			<a href = "#modal3" class = "modal-link" data-toggle = "modal"> <i class = "fas fa-user-md"></i></a>
   			<h3>Breast Cancer Diagnosis</h3>
         <p class = "text-muted">
