--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,6 @@
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
-
 	  gtag('config', 'UA-119384546-1');
 	</script>
 	<meta charset="utf-8">
@@ -92,7 +91,7 @@
 				</div>
 				<!--Modal footer -->
 				<div class = "modal-footer">
-					<a href = "https://github.com/ledet20/arcangel" class = "btn btn-info" role = "button">GitHub Link</a>
+					<a href = "https://github.com/ledet20/arcangel" class = "btn btn-info" role = "button">GitHub</a>
 					<button type = "button" class = "btn btn-danger" data-dismiss = "modal">Close</button>
 				</div>
 			</div>
@@ -116,7 +115,7 @@
 				</div>
 				<!--Modal footer -->
 				<div class = "modal-footer">
-					<a href = "https://github.com/Abhishaike/ASL_Translation" class = "btn btn-info" role = "button">GitHub Link</a>
+					<a href = "https://github.com/Abhishaike/ASL_Translation" class = "btn btn-info" role = "button">GitHub</a>
 					<button type = "button" class = "btn btn-danger" data-dismiss = "modal">Close</button>
 				</div>
 			</div>
@@ -140,7 +139,7 @@
 				</div>
 				<!--Modal footer -->
 				<div class = "modal-footer">
-					<a href = "https://github.com/briannoogin/Neural-Network-Science-Fair-Research" class = "btn btn-info" role = "button">GitHub Link</a>
+					<a href = "https://github.com/briannoogin/Neural-Network-Science-Fair-Research" class = "btn btn-info" role = "button">GitHub</a>
 					<button type = "button" class = "btn btn-danger" data-dismiss = "modal">Close</button>
 				</div>
 			</div>
