--- a/aboutMe.html
+++ b/aboutMe.html
@@ -19,8 +19,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="style.css" rel="stylesheet">
-  <link rel="shortcut icon" href="img/favicon3.ico" type="image/x-icon">
-  <link rel="icon" href="img/favicon3.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <!-- Navigation -->
