--- a/projects.html
+++ b/projects.html
@@ -224,14 +224,14 @@
 	<footer>
 	<div class = "container-fluid">
 		<div class = "row text-center padding">
-			<div class = "col 12">
-				<hr class = "light">
-				<h5>&copy; Brian Nguyen</h5>
-			</div>
 			<div class = "col-12 social padding">
+				<hr class = "light">
 				<a href = "https://www.linkedin.com/in/brian-qh-nguyen/"><i class = "fab fa-linkedin"></i></a>
 				<a href = "https://github.com/briannoogin/"><i class = "fab fa-github"></i></a>
 				<a href = "https://devpost.com/briannoogin/"><span class="icon-devpost_medium"></span></a>
+			</div>
+			<div class = "col 12">
+				<h5>Copyright &copy; Brian Nguyen 2018</h5>
 			</div>
 		</div>
 	</div>
