--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class = "container-fluid-padding">
 	<div class = "row text-center padding">
 		<div class = "col-xs-12 col-sm-4 col-md-4">
-			<i class = "fas fa-code"></i>
+			<i class = "fab fa-html5"></i>
 			<h3>HTML</h3>
 		</div>
 		<div class = "col-xs-12 col-sm-4 col-md-4">
@@ -95,7 +95,6 @@
 		</div>
 	</div>
 </div>
-<!--- Footer -->
 <footer>
 <div class = "container-fluid">
 	<div class = "row text-center padding">
