--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<div class = "row text-center padding">
 		<div class = "col-xs-12 col-sm-4 col-md-4">
 			<i class = "fab fa-html5"></i>
-			<h3>HTML</h3>
+			<h3>HTML5</h3>
 		</div>
 		<div class = "col-xs-12 col-sm-4 col-md-4">
 			<i class = "fab fa-css3"></i>
@@ -91,7 +91,7 @@
 		</div>
 		<div class = "col-xs-12 col-sm-4 col-md-4">
 			<i class = "fas fa-bold"></i>
-			<h3>BOOTSTRAP</h3>
+			<h3>BOOTSTRAP 4</h3>
 		</div>
 	</div>
 </div>
