--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,7 @@
 			<div class = "modal-content">
 				<!-- Modal header-->
 				<div class = "modal-header">
-					<h4 class = "model-title">ArcAngel (Jan 2018)</h4>
+					<h4 class = "model-title">ArcAngel (2018)</h4>
 					<button type = "button" class = "close" data-dismiss = "modal">&times;</button>
 				</div>
 				<!-- Modal body-->
@@ -119,7 +119,7 @@
 			<div class = "modal-content">
 				<!-- Modal header-->
 				<div class = "modal-header">
-					<h4 class = "model-title">C-ASL</h4>
+					<h4 class = "model-title">C-ASL (2018)</h4>
 					<button type = "button" class = "close" data-dismiss = "modal">&times;</button>
 				</div>
 				<!-- Modal body-->
@@ -149,7 +149,7 @@
 			<div class = "modal-content">
 				<!-- Modal header-->
 				<div class = "modal-header">
-					<h4 class = "model-title">Breast Cancer Diagnosis</h4>
+					<h4 class = "model-title">Breast Cancer Diagnosis (2016)</h4>
 					<button type = "button" class = "close" data-dismiss = "modal">&times;</button>
 				</div>
 				<!-- Modal body-->
@@ -175,7 +175,7 @@
 			<div class = "modal-content">
 				<!-- Modal header-->
 				<div class = "modal-header">
-					<h4 class = "model-title">App4ThT</h4>
+					<h4 class = "model-title">App4ThT (2016)</h4>
 					<button type = "button" class = "close" data-dismiss = "modal">&times;</button>
 				</div>
 				<!-- Modal body-->
@@ -200,7 +200,7 @@
 			<div class = "modal-content">
 				<!-- Modal header-->
 				<div class = "modal-header">
-					<h4 class = "model-title">Ginger Rail</h4>
+					<h4 class = "model-title">Ginger Rail (2016)</h4>
 					<button type = "button" class = "close" data-dismiss = "modal">&times;</button>
 				</div>
 				<!-- Modal body-->
