changed the color of the navigation links

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -38,8 +38,8 @@
   			<li class = "nav-item">
   				<a class = "nav-link" href = "/"><i class = "fas fa-home fa-fw"> </i > Home</a>
   			</li>
-  			<li class = "nav-item active">
-  				<a class = "nav-link" href = "aboutMe"><i class = "fas fa-male fa-fw"></i > About Me</a>
+  			<li class = "nav-item">
+  				<a class = "nav-link active" href = "aboutMe"><i class = "fas fa-male fa-fw"></i > About Me</a>
   			</li>
   			<li class = "nav-item">
   				<a class = "nav-link" href = "projects"><i class = "fas fa-code-branch fa-fw"> </i > Projects</a>
