--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119384546-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -40,8 +40,8 @@
   			<li class = "nav-item">
   				<a class = "nav-link" href = "aboutMe"><i class = "fas fa-male fa-fw"></i > About Me</a>
   			</li>
-  			<li class = "nav-item active">
-  				<a class = "nav-link" href = "projects"><i class = "fas fa-code-branch fa-fw"> </i > Projects</a>
+  			<li class = "nav-item">
+  				<a class = "nav-link active" href = "projects"><i class = "fas fa-code-branch fa-fw"> </i > Projects</a>
   			</li>
   		</ul>
   	</div>
