--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Brian Nguyen</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<link href="style.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+	<link href="style.css" rel="stylesheet">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -36,8 +36,8 @@
 	</button>
 	<div class = "collapse navbar-collapse" id = "navbarResponsive">
 		<ul class = "navbar-nav ml-auto">
-			<li class = "nav-item active">
-				<a class = "nav-link" href = "/"><i class = "fas fa-home fa-fw"> </i > Home</a>
+			<li class = "nav-item">
+				<a class = "nav-link active" href = "/"><i class = "fas fa-home fa-fw"> </i > Home</a>
 			</li>
 			<li class = "nav-item">
 				<a class = "nav-link" href = "aboutMe"><i class = "fas fa-male fa-fw"></i > About Me</a>
