updated description for about me

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -55,9 +55,10 @@
         <h1>Hello!</h1>
         <p class = "intro">
           I'm Brian Nguyen. I enjoy learning about machine learning, working out, and listening to EDM.
+					I'm currently a sophomore at the University of Texas at Dallas pursuing a B.S. in CS.
 					Feel free to check out my <a href =  "resume.pdf"> resume!</a>
         </p>
-      </div>
+			</div>
       <div class = "col-xs-12 col-sm-6 col-md-4 col-lg 6">
         <div class = "img-fluid">
           <img class = "img-responsive" src = "img/headshot.jpg" alt = "headshot" style = "width:65%">
@@ -65,6 +66,7 @@
       </div>
     </div>
   </div>
+
 	<!--- Footer -->
 	<footer>
 	<div class = "container-fluid">
