added a height parameter to viewport

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no height = device-height">
 	<title>Brian Nguyen</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="style.css" rel="stylesheet">
@@ -63,6 +63,21 @@
       </div>
     </div>
   </div>
+	<!-- Companies-->
+	<div class = "container-fluid">
+		<div class = "row text-center padding">
+			<div class = "col-12">
+				<h2>Companies that I have worked with</h2>
+			</div>
+			<div class = "col-xs-12 col-sm-6 company-profile">
+			<a href = "https://boldidea.org/"><img class = "img-thumbnail"src = "img/boldidea.png" style = "width:192px; height:192px"/></a>
+			</div>
+			<div class = "col-xs-12 col-sm-6company-profile">
+			<a href = "http://www.techedventures.com/"><img class = "img-thumbnail" src = "img/tech.jpg" style = "width:192px; height:192px"/></a>
+			</div>
+		</div>
+		</div>
+	</div>
 	<!--- Footer -->
 	<footer>
 	<div class = "container-fluid">
