changed the button for about me

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div class = "carousel-caption">
 					<h1 class = "display-2"> Brian Nguyen </h1>
 					<h3>Programmer, Ideator, Powerlifter</h3>
-					<a href = "aboutMe" class = "btn btn-outline-light btn-lg"> About me!</a>
+					<a href = "aboutMe" class = "btn btn-light btn-lg"> About me!</a>
 					<a href = "projects" class = "btn btn-primary btn-lg" >My Personal Projects!</a>
 				</div>
 		</div>
