--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
 </nav>
 <!--- Image Slider -->
-<div id = "slides" class = "carousel slide" data-ride = "carousel">
+<div id = "slides" class = "carousel slide">
 	<div class = "carousel-inner">
 		<div class = "carousel-item active">
 				<img src ="img/background_home.jpeg">
