changed wallpaper pic and color of navigation links

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div id = "slides" class = "carousel slide">
 	<div class = "carousel-inner">
 		<div class = "carousel-item active">
-				<img src ="img/background_home.jpeg">
+				<img src ="img/wallpaper.jpg">
 				<div class = "carousel-caption">
 					<h1 class = "display-2"> Brian Nguyen </h1>
 					<h3>Programmer, Ideator, Powerlifter</h3>
