changed colors of hyperlinks to royal blue

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -53,7 +53,7 @@
         <p class = "intro">
           I'm Brian Nguyen. I enjoy learning about machine learning, working out, and listening to EDM.
 					I'm currently a sophomore at the University of Texas at Dallas pursuing a B.S. in CS.
-					Feel free to check out my <a href =  "resume.pdf"> resume!</a>
+					Feel free to check out my <a href =  "resume.pdf"> <span class = "colored">resume!</span></a>
         </p>
 			</div>
       <div class = "col-xs-12 col-sm-8 col-md-6 col-lg 12">
