added a gif to ginger rail, jpg of poster for breast cancer research, and added captions for the modal images

--- a/projects.html
+++ b/projects.html
@@ -99,9 +99,13 @@
 					<p>
 						Android app that aggregated and mapped tweets onto a heat map to show location of interest for first-responders.
 						Tweets were collected through a Matlab implementation of the Twitter API.
+						To demonstrate the heat map, tweets were collected live from Texas A&M and shown on the heat map.
 	          Developed with Matlab, Java, and Esri API. Developed at TAMUHACK 2018. Won Best Use of ESRI API.
 					</p>
 					<img class = "modal-img" src = "img/arcangel.png" alt = "Demonstration of ArcAngel" />
+					<figcaption>
+						Heatmap of tweets at Texas A&M
+					</figcaption>
 				</div>
 				<!--Modal footer -->
 				<div class = "modal-footer">
@@ -132,6 +136,9 @@
 						Developed for ACM Projects and won second place.
 					</p>
 					<img class = "modal-img" src = "img/hand.gif" alt = "Demonstration of ASL Project"/>
+					<figcaption>
+						Classification of ASL alphabet
+					</figcaption>
 				</div>
 				<!--Modal footer -->
 				<div class = "modal-footer">
@@ -156,8 +163,14 @@
 						Used an ensemble of shallow neural networks to classify whether a tumor is benign or malignant.
 						Used statistical methods such as non-parametric bootstrapping to improve model perfomance.
 						Used performance measures such as Aikake information criterion (AIC) and area under curve (AUC) to assess model performance.
+						Used principal components analysis (PCA) and T-distributed stochastic neighbor embedding (T-SNE) to visualize the data.
 						Data collected from University of Wisconsin. Developed with Matlab. Project conducted at University of Texas at Dallas.
+						Submitted paper to Siemens Competition and won Semifinalist, top 300 research project in the nation.
 					</p>
+					<img class = "modal-img" src = "img/poster.jpg" alt = "Science Fair poster"/>
+					<figcaption>
+						Science Fair Poster
+					</figcaption>
 				</div>
 				<!--Modal footer -->
 				<div class = "modal-footer">
@@ -183,6 +196,9 @@
 						Developed with HTML, CSS, and JavaScript. Project created at IncubateX DFW and won Best of Solera.
 					</p>
 					<img class = "modal-img" src = "img/app4tht.png" alt = "Demonstration of App4Tht" />
+					<figcaption>
+						Home screen of website platform
+					</figcaption>
 				</div>
 				<!--Modal footer -->
 				<div class = "modal-footer">
@@ -209,6 +225,10 @@
 						the cap of the bottle is punctured, and the bottle is launched. Project was a proof of concept of teaching computer science principles through low-cost materials.
 						Arduino Project created at HackDFW.
 					</p>
+					<img class = "modal-img" src = "img/rocket.gif" alt = "Demonstration of GingerRail Project"/>
+					<figcaption>
+						Demonstration of GingerRail
+					</figcaption>
 				</div>
 				<!--Modal footer -->
 				<div class = "modal-footer">
