changed the modal description for app4tht

--- a/projects.html
+++ b/projects.html
@@ -192,12 +192,13 @@
 				<!-- Modal body-->
 				<div class = "modal-body">
 					<p>
-						Website platform proof of concept for the crowdsourcing of project ideas.
+						Website platform proof of concept for the crowdsourcing of project ideas. Ideators post their project ideas on the website,
+						and developers are able to look at these project ideas and contribute to them.
 						Developed with HTML, CSS, and JavaScript. Project created at IncubateX DFW and won Best of Solera.
 					</p>
 					<img class = "modal-img" src = "img/app4tht.png" alt = "Demonstration of App4Tht" />
 					<figcaption>
-						Home screen of website platform
+						Home screen
 					</figcaption>
 				</div>
 				<!--Modal footer -->
