added a gif of heatmap for arcangel

--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
 						To demonstrate the heat map, tweets were collected live from Texas A&M and shown on the heat map.
 	          Developed with Matlab, Java, and Esri API. Developed at TAMUHACK 2018. Won Best Use of ESRI API.
 					</p>
-					<img class = "modal-img" src = "img/arcangel.png" alt = "Demonstration of ArcAngel" />
+					<img class = "modal-img" src = "img/arcangel.gif" alt = "Demonstration of ArcAngel" />
 					<figcaption>
 						Heatmap of tweets at Texas A&M
 					</figcaption>
