--- a/projects.html
+++ b/projects.html
@@ -97,7 +97,7 @@
 				<!-- Modal body-->
 				<div class = "modal-body">
 					<p>
-						Android app that aggregated and mapped tweets onto a heat map to show location of interest for first-responders.
+						Android app that aggregated and mapped curated tweets based on keywords onto a heat map to show location of interest for first-responders.
 						Tweets were collected through a Matlab implementation of the Twitter API.
 						To demonstrate the heat map, tweets were collected live from Texas A&M and shown on the heat map.
 	          Developed with Matlab, Java, and Esri API. Developed at TAMUHACK 2018. Won Best Use of ESRI API.
