changed resume and description

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -52,7 +52,7 @@
         <h1>Hello!</h1>
         <p class = "intro">
           I'm Brian Nguyen. I enjoy learning about machine learning, working out, and listening to EDM.
-					I'm currently a sophomore at the University of Texas at Dallas pursuing a B.S. in CS.
+					I'm currently a junior at the University of Texas at Dallas pursuing a B.S. in CS.
 					Feel free to check out my <a href =  "resume.pdf"> <span class = "colored">resume!</span></a>
         </p>
 			</div>
